{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 67,
  "lineage": "b55f0ced-de2d-03a4-9e8e-2f3f14349a33",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:vpc/vpc-071f8836040c9beba",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0330c7d63d4d8a397",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0e5da6d5b4fc655d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Default VPC"
                ]
              }
            ],
            "id": "vpc-071f8836040c9beba",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09e049e5a24ca88ef",
            "owner_id": "255945442255",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:security-group/sg-05ac2a39329c9ca18",
            "description": "Allow traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ac2a39329c9ca18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ben_allow_tls",
            "name_prefix": "",
            "owner_id": "255945442255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sg"
            },
            "tags_all": {
              "Name": "allow_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-071f8836040c9beba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"ben-services\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:subnet/subnet-0cc94b815da8f0c95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 4068,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc94b815da8f0c95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255945442255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-071f8836040c9beba"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"ben-services\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:255945442255:security-group/sg-08e62d9484c49439f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08e62d9484c49439f",
            "ingress": [],
            "name": "ben-services-20240831035317511900000004",
            "name_prefix": "ben-services-",
            "owner_id": "255945442255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ben-services"
            },
            "tags_all": {
              "Name": "ben-services"
            },
            "timeouts": null,
            "vpc_id": "vpc-071f8836040c9beba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_sg",
            "data.aws_subnets.public",
            "data.aws_vpc.selected",
            "module.ecs.module.service.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}